--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jenkins-notifier",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Get notifications of unstable jobs in Jenkins",
   "license": "MIT",
   "repository": "bojzi/jenkins-notifier",
@@ -25,8 +25,10 @@
   ],
   "dependencies": {
     "jenkins": "^0.10.1",
+    "log-symbols": "^1.0.2",
     "meow": "^3.3.0",
     "node-notifier": "^4.2.3",
-    "open": "0.0.5"
+    "open": "0.0.5",
+    "prompt": "^0.2.14"
   }
 }
